# postal-code-api

./: CLAUDE.md  README.md  TESTING_GUIDE.md  TODO.md  comprehensive_postal_test_suite.py  create_db.py  exploration.ipynb  performance_benchmark_suite.py  population_data.csv  postal_api_test_suite.py  pyproject.toml
.claude/: settings.local.json
.github/: README.md  dependabot.yml
.github/workflows/: elixir-ci.yml  fastapi-ci.yml  flask-ci.yml  go-ci.yml  main-ci.yml
elixir/: .gitignore  README.md  mix.exs
elixir/lib/: postal_code_api.ex
elixir/lib/postal_code_api/: application.ex  database.ex  house_number_matcher.ex  polish_normalizer.ex  postal_service.ex  postal_service.ex.backup  router.ex
elixir/test/: postal_code_api_test.exs
fastapi/: .gitkeep  README.md  app.py  database.py  house_number_matcher.py  main.py  polish_normalizer.py  postal_service.py  requirements.txt  routes.py  test_basic.py
flask/: README.md  app.py  app_normalized.py  create_db.py  create_normalized_db.py  database.py  house_number_matcher.py  polish_normalizer.py  postal_service.py  pytest.ini  requirements.txt  routes.py  run_tests.py  test_app.py  test_house_number_matching.py  test_normalized_implementation.py  validate_migration.py
flask/tests/: README.md  __init__.py
flask/tests/api/: test_endpoints.py
flask/tests/unit/: test_postal_service.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  (+1 more)
go/: .gitignore  README.md  go.mod  main.go  test_basic.go
helpers/: create_db.py  population_data.csv
(+16 files in other folders)
